# cog-statistics-endpoint

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  activate.sh  docker-compose.yaml  gunicorn.conf.py  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg
cog_statistics/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_app.py
