[metadata]
name = cog-statistics-endpoint
version = 1.0.0
description = FastAPI service for extracting statistics from COG timeseries in GeoParquet STAC collections
author = EOX
license = MIT
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.115.0
    uvicorn>=0.31.0
    gunicorn>=23.0.0
    geopandas>=1.0.1
    pyarrow>=18.1.0
    rioxarray>=0.18.1
    xarray>=2024.10.0
    structlog>=24.4.0

[options.packages.find]
exclude = tests

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
